--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Euromeeting 10 2026</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.webp" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.webp" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
