--- a/index.html
+++ b/index.html
@@ -6,9 +6,77 @@
     <meta name="theme-color" content="#000000" />
     <title>Euromeeting 10 2026</title>
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon.webp" />
+    <style>
+      #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #172027 0%, #344745 100%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.5s ease-out;
+      }
+
+      #loading-screen.fade-out {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .loader-spinner {
+        display: flex;
+        gap: 12px;
+      }
+
+      .loader-spinner .dot {
+        width: 16px;
+        height: 16px;
+        background-color: #d6a13e;
+        border-radius: 50%;
+        animation: bounce 1.4s infinite ease-in-out both;
+      }
+
+      .loader-spinner .dot:nth-child(1) {
+        animation-delay: -0.32s;
+      }
+
+      .loader-spinner .dot:nth-child(2) {
+        animation-delay: -0.16s;
+      }
+
+      @keyframes bounce {
+        0%,
+        80%,
+        100% {
+          transform: scale(0);
+        }
+        40% {
+          transform: scale(1);
+        }
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <div id="loading-screen">
+      <div class="loader-spinner">
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+      </div>
+    </div>
+
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
